# xstatic-angular-uuid

./: .gitreview  LICENSE  README.txt  setup.cfg  setup.py
xstatic/pkg/angular_uuid/: __init__.py
