[metadata]
name = XStatic-Angular-UUID
description = Angular-UUID 0.0.4 (XStatic packaging standard)
description-file = README.rst
maintainer = xinni.ge
maintainer-email = xinni.ge@ntt.com
home-page = https://github.com/munkychop/angular-uuid
keywords = angular_uuid xstatic
license = MIT
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
